<resources>
    <string name="app_name">OrderTracker</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search Here</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Testing App</string>
    <string name="hint_search">Search</string>
    <string name="yes_btn">YES</string>
    <string name="order_confirmation">Order confirmation</string>
    <string name="confirmation_message">Do you want to continue with the order</string>
    <string name="no_btn">No</string>
    <string name="beat">Beat/Area</string>
    <string name="select_filter">Select Filter</string>
    <string name="filter_by_category">By Category</string>
    <string name="filter_by_brand">By Brand</string>
    <string name="by_company">By Company</string>
    <string name="by_scheme">By Scheme</string>
    <string name="by_preferred_item">By Preferred Item</string>
    <string name="no_item_found">No item found</string>
    <string name="no_filter">Clear Filter</string>
    <string name="item_selected">Item Selected</string>
    <string name="save">Save</string>
    <string name="order_taken">Order taken successfully</string>
    <string name="cancel">Cancel</string>
    <string name="next">continue</string>

</resources>
