<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginBottom="@dimen/dp24"
        android:layout_marginLeft="@dimen/dp24"
        android:gravity="bottom"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/select_filter"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/colorPrimaryDark"/>
    <TextView
        android:id="@+id/byBrand"
        android:clickable="true"
        android:textSize="@dimen/sp16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp48"
        android:layout_marginBottom="@dimen/dp12"
        android:layout_marginTop="@dimen/dp24"
        android:text="@string/filter_by_brand"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/byCategory"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:textSize="@dimen/sp16"
        android:layout_marginBottom="@dimen/dp12"
        android:layout_marginLeft="@dimen/dp48"
        android:textColor="@color/colorPrimary"
        android:text="@string/filter_by_category"/>
    <TextView
        android:id="@+id/byCompany"
        android:clickable="true"
        android:textSize="@dimen/sp16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:layout_marginBottom="@dimen/dp12"
        android:layout_marginLeft="@dimen/dp48"
        android:textColor="@color/colorPrimary"
        android:text="@string/by_company"/>
    <TextView
        android:id="@+id/byPreferred"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:textSize="@dimen/sp16"
        android:layout_marginBottom="@dimen/dp12"
        android:layout_marginLeft="@dimen/dp48"
        android:textColor="@color/colorPrimary"
        android:text="@string/by_preferred_item"/>

    <TextView
        android:id="@+id/byScheme"
        android:clickable="true"
        android:textSize="@dimen/sp16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:layout_marginBottom="@dimen/dp12"
        android:layout_marginLeft="@dimen/dp48"
        android:textColor="@color/colorPrimary"
        android:text="@string/by_scheme"/>

    <TextView
        android:id="@+id/itemSelected"
        android:clickable="true"
        android:textSize="@dimen/sp16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:layout_marginBottom="@dimen/dp12"
        android:layout_marginLeft="@dimen/dp48"
        android:textColor="@color/colorPrimary"
        android:text="@string/item_selected"/>

    <TextView
        android:id="@+id/noFilter"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:textSize="@dimen/sp16"
        android:layout_marginBottom="@dimen/dp52"
        android:layout_marginLeft="@dimen/dp48"
        android:textColor="@color/colorPrimary"
        android:text="@string/no_filter"/>

</LinearLayout>